# cheerclaw

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cheerclaw/: __init__.py  cli.py  main.py
cheerclaw/agent/: __init__.py  main_agent.py  sub_agent.py  use_subagent_tool.py
cheerclaw/channels/: __init__.py  cli_channel.py  cron_channel.py  feishu_channel.py  qq_channel.py
cheerclaw/config/: __init__.py  config_loader.py  config_schema.py
cheerclaw/context/: __init__.py  compress2.py  context_manager.py
cheerclaw/context/prompts/: sub_agent_prompt.md  system_prompt.md
cheerclaw/show_style/: __init__.py  diff_helper.py  welcome.py
cheerclaw/skills/clawhub/: SKILL.md  SKILL.md.cp
cheerclaw/skills/code/: SKILL.md
cheerclaw/skills/code/.clawhub/: origin.json
cheerclaw/skills/memory/: SKILL.md
cheerclaw/skills/skill-creator/: SKILL.md
cheerclaw/skills/weather/: SKILL.md
cheerclaw/skills_module/: __init__.py  loader.py
cheerclaw/tools_module/: __init__.py  base.py  calculator.py  cron_task.py  filesystem.py  read_skill.py  registry.py  send_message.py  shell.py  tavily_search.py  todo_list.py
cheerclaw/utils/: __init__.py  agent_helpers.py  channel_info.py  history_formatter.py  llm_client.py  message_compressor.py  openai_client.py  prompt_loader.py
