[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheerclaw"
version = "0.1.3"
description = "CheerClaw - 灵活的 AI Agent 框架，支持多通道交互"
requires-python = ">=3.8"
dependencies = [
    "pydantic==2.12.5",
    "openai==2.30.0",
    "httpx==0.28.1",
    "aiohttp==3.13.3",
    "croniter==6.2.2",
    "loguru==0.7.3",
    "prompt-toolkit==3.0.52",
    "rich==14.3.3",
    "tiktoken==0.12.0",
    "websockets==15.0.1",
    "tavily-python==0.7.23",
    "qq-botpy==1.2.1",
]

[project.scripts]
cheerclaw = "cheerclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cheerclaw*"]

[tool.setuptools.package-data]
cheerclaw = [
    "skills/**/*",
    "context/prompts/*",
]
